--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     /*Colors*/
     --color-light: #fff;
     --color-dark: #303030;
-    --color-main: #16e0bd;
+    --color-main: #1995FB;
 
     /*Font-Size*/
     --fs-h1: 3rem;
@@ -24,11 +24,13 @@
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
+    /*Box-Shadow*/
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
           0.125em 0.125em 0.25em rgba(0,0,0,.15);
 
 
 }
+
 
 /*Responsive Design*/
 @media (min-width: 800px) {
@@ -38,9 +40,82 @@
         --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
+
+    .services {
+        display: flex;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .service + .service {
+        margin-left: 2em;
+    }
 }
 
-body{
+@media (min-width: 600px ) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        gap: 1em;
+        grid-template-areas: 
+             "img title"
+             "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index: 2;
+    }
+
+    .section__subtitle--intro {
+        align-self: self-start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em;
+        width: calc(100% + 1.5em);
+    }
+
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas: 
+            "title img"
+            "subtitle img"
+            "text img";
+        gap: 2em;
+    }
+
+    .section__title--about {
+        grid-area: title;
+    }
+
+    .section__subtitle--about{
+        grid-column: 1 / -1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
+    }
+
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
+}
+
+
+/*Elements*/
+body {
     background: var(--color-light);
     color: var(--color-dark);
     margin: 0;
@@ -68,9 +143,282 @@ strong {
     outline-offset: 3px;
 }
 
+
 /*Buttons*/
 .btn {
     display: inline-block;
     padding: .5em 2.5em;
-    
+    background: var(--color-main);
+    color: var(--color-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+
+/*Typography*/
+
+h1,
+h2,
+h3 {
+    line-height: 1;
+    margin: 0;
+}
+
+h1{ font-size: var(--fs-h1);}
+h2{ font-size: var(--fs-h2);}
+h3{ font-size: var(--fs-h3);}
+
+.section__title {
+    margin-bottom: .25em;
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+    display: block;
+}
+
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--color-main);
+    padding: .25em 1em;
+    font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+}
+
+.section__subtitle--work {
+    color: var(--color-main);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
+
+/*Header*/
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.logo {
+    max-width: 100px;
+} 
+
+
+/*Navigation*/
+.nav {
+    position: fixed;
+    background: var(--color-dark);
+    color: var(--color-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+}
+
+.nav__list {
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+}
+
+.nav__link:hover {
+    color: var(--color-main);
+    text-decoration: underline;
+}
+
+
+/*Hamburger*/
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--color-main);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before { top: 6px; }
+.hamburger::after { bottom: 6px; }
+
+
+/*Intro Section*/
+
+.intro {
+    position: relative;
+}
+
+.intro__img {
+    box-shadow: var(--bs);
+}
+
+.section__subtitle--intro {
+    display: inline-block;
+}
+
+
+/*My Services*/
+
+.my-services {
+    background-color: var(--color-dark);
+    /*background-image: url() ; */
+    background-size: cover;
+    background-blend-mode: multiply;
+    color: var(--color-light);
+    text-align: center;
+
+}
+
+.section__title--services {
+    color: var(--color-main);
+    position: relative;
+}
+
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 2em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: var(--color-light);
+    opacity: 0.25;
+}
+
+.services {
+    margin-bottom: 4em;
+}
+
+.service {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+
+/*About Me*/
+
+.about-me {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.about-me__img {
+    box-shadow: var(--bs);
+}
+
+
+/*My Work*/
+
+.my-work {
+    background-color: var(--color-dark);
+    color: var(--color-light);
+    text-align: center;
+}
+
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.portfolio__item {
+    background: var(--color-main);
+    overflow: hidden;
+}
+
+.portfolio__img {
+    transition: 
+         transform 750ms cubic-bezier(.5, 0, .5, 1),
+         opacity 250ms linear;
+}
+
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
+}
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
+    opacity: .5;
+}
+
+
+/*Footer*/
+
+footer {
+    background: #111;
+    color: var(--color-main);
+    text-align: center;
+    padding: 2.5em 0;
+}
+
+footer a {
+    color: inherit;
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
+} 
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin: 0.5em;
+}
+
+.social-list__link {
+    padding: .5em;
 }
