--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,11 @@
 
 
 /*Elements*/
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: var(--color-light);
     color: var(--color-dark);
@@ -218,7 +223,7 @@ header {
 }
 
 .logo {
-    max-width: 100px;
+    max-width: 120px;
 } 
 
 
@@ -259,6 +264,37 @@ header {
     text-decoration: underline;
 }
 
+.nav-toggle {
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.nav-open .nav {
+    transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
+}
+
 
 /*Hamburger*/
 
@@ -277,8 +313,16 @@ header {
     transition: transform 250ms ease-in-out;
 }
 
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
+.hamburger::before, 
+.hamburger::after { 
+    content: '';
+    position: absolute;
+    left: 0;
+    right:0;
+ }
+
+.hamburger::before {top: 6px;} 
+.hamburger::after{ bottom: 6px;}
 
 
 /*Intro Section*/
@@ -356,10 +400,11 @@ header {
 .portfolio {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-flow: dense;
 }
 
 .portfolio__item {
-    background: var(--color-main);
+    background: var(--color-dark);
     overflow: hidden;
 }
 
