--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,7 @@ header {
     color: inherit;
     font-weight: var(--fw-bold);
     font-size: var(--fs-h2);
+    text-decoration: none;
 }
 
 .nav__link:hover {
