--- a/styles.css
+++ b/styles.css
@@ -415,6 +415,10 @@ header {
     transition: 
          transform 750ms cubic-bezier(.5, 0, .5, 1),
          opacity 250ms linear;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .portfolio__item:focus {
