--- a/styles.css
+++ b/styles.css
@@ -488,3 +488,15 @@ footer a {
     margin-left: auto;
     margin-right: auto;
 }
+
+.repo_link {
+    text-align: center;
+    text-decoration: none;
+    font-weight: var(--fw-bold);
+    color: #1995FB;
+    
+}
+
+.repo_link:hover {
+    text-decoration: underline;
+}
